# IceStream

./: .gitignore  .gitmodules  GLACIATION-IceStream-0.0.1-SBOM.spdx  README.md  icestream.sh
admission_control_service/: README.md
cognitive_framework/: Architecture.md
data-semantification/: README.md
data_sanitization_service/code/rest-api/: Dockerfile  README.md  k8s-deployment.yaml  openapi.yaml  requirements.txt  setup.cfg
data_sanitization_service/code/rest-api/.openapi-generator/: FILES
data_sanitization_service/code/rest-api/src/openapi_server/: main.py
data_sanitization_service/code/rest-api/src/openapi_server/apis/: job_api.py  job_api_base.py
data_sanitization_service/code/rest-api/src/openapi_server/models/: common_job.py  common_job_executor.py  job.py  job_status.py  k_anonymity_job.py  l_diversity_job.py  mixed_job.py  spark_pod_spec.py  submit_job200_response.py
data_sanitization_service/code/rest-api/templates/: spark-app.json
data_sanitization_service/code/rest-api/tests/: test_job_api.py
docs/: README.md  (+2 more)
secure_collaborative_computation_service/coordination_service/stub/: Cargo.toml  Dockerfile  README.md
secure_collaborative_computation_service/coordination_service/stub/chart/: Chart.yaml  values.yaml
secure_collaborative_computation_service/coordination_service/stub/chart/templates/: _helpers.tpl  deployment.yml  service.yml
secure_collaborative_computation_service/coordination_service/stub/src/: main.rs
secure_collaborative_computation_service/coordination_service/stub/src/api/: mod.rs  participation.rs  register_upload.rs
(+246 files in other folders)
