[metadata]
name = openapi_server
version = 0.1.0
description = This service implements an efficient and effective approach to protect users data by obfuscating information that can disclose their identities and sensitive information.
long_description = file: README.md
keywords = OpenAPI Data Sanitization Service
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = 
    fastapi[all]
    kubernetes
    minio
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
