[package]
name = "coordination_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.2"
poem-openapi = { version = "1.2", features = ["swagger-ui"] }
tracing-subscriber = "0.3.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1"
sysinfo = "0.30.10"
